Changelog
=========

4.3-dev - (unreleased)
----------------------
 * Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.daviz
 * Feature: Added QuickUpload field to DavizPresentation Schema in order
   to easily upload new TAB separated files as data sources
   [voineali #4965]
 * Change: changed texts for visualizations, changed Data Sources to be mandatory [szabozo0 #4948]
 * Bug fix: properly link images in css files [tiberich #4956]
 * Change: corrected daviz presentation description [demarant]

4.2 - (2012-02-06)
------------------
 * no changes

4.1 - (2012-02-06)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.daviz
  [voineali #4866]
* Feature: Moved facets in global settings tab in order to have more space
  for views configuration
  [voineali #4914]
* Feature: Added a CSS class on section tabs
  [voineali #4880]
* Feature: Redirects to daviz-edit if there is no DaViz view/chart configured
  [voineali #4882]
* Feature: Added a way to register additional charts as tabs in view mode.
  [voineali #4873]
* Feature: Added DavizPresentation content-type in order to easy aggregate
  internal and external exhibit sources
  [voineali #4866]

4.0 - (2011-11-07)
------------------
* Feature: Added upgrade steps
  [voineali #4392]
* Feature: Plone 4.x compatible
  [ichimdav, voineali #4234]
* Feature: Added exhibit 'properties' dict in generated JSON
  [voineali 4528]

1.5 - (2011-09-21)
------------------
* Feature: Added exhibit 'properties' dict in generated JSON
  [voineali 4528]

1.4 - (2011-09-07)
------------------
* Feature: Enabled daviz for eea.dataservice EEAFigureFile
  [voineali #4492]

1.3 - (2011-07-29)
------------------
* Feature: Added babel translator API and a custom translator:
  rdf-xml to exhibit-json
  [voineali #4416]
* Feature: Possibility to add external exhibit data sources like