@@ -1,0 +1,49 @@
+.daviz-spreadsheet-accordion {
+  border: 1px dotted #ccc;
+}
+
+.daviz-presentation-spreadsheet {
+}
+
+.daviz-spreadsheet-accordion .ui-state-default {
+  background: whitesmoke;
+  border-bottom: 1px dotted #ccc;
+  border-radius: 0;
+}
+
+.daviz-spreadsheet-accordion .ui-state-active {
+  background: white;
+  border-bottom: 1px dotted #ccc;
+  border-radius: 0;
+}
+
+.daviz-spreadsheet-accordion .ui-accordion-header .ui-icon {
+  left: auto;
+  right: 5px;
+}
+
+.daviz-spreadsheet-accordion .field {
+}
+
+#content .daviz-spreadsheet-accordion textarea {
+  width: 98%;
+  height: 14em;
+  border: 1px solid #8CACBB;
+  background: white url(input_background.gif) repeat-x scroll 0 0;
+}
+
+#content .ui-state-default a.daviz-ajax {
+  color: #999 !important;
+  text-shadow: none;
+  font-size: 15px;
+  text-align: right;
+  margin-right: 10px;
+}
+
+#content .ui-state-active a.daviz-ajax {
+  color: #555 !important;
+  text-shadow: none;
+  font-size: 15px;
+  text-align: right;
+  margin-right: 10px;
+}
