@@ -11,7 +11,7 @@
   <link rel="exhibit/babel-translator"
     tal:attributes="href string:${here/absolute_url}/@@babel-translator" />
 
-  <!-- Related items merged JSON -->
+  <!-- Related items merged JSON with own JSON -->
   <link rel="exhibit/data" type="application/json"
     tal:attributes="href string:${here/absolute_url}/@@daviz-relateditems.json" />
 
@@ -23,10 +23,6 @@
     href string:${source/name};
     ex:converter python:source.get('converter', None) or None;" />
   </tal:additional>
-
-  <!-- Own JSON -->
-  <link rel="exhibit/data" type="application/json"
-    tal:attributes="href string:${here/absolute_url}/@@daviz-view.json" />
 
   <!-- include exhibit api -->
   <script type="text/javascript">
