@@ -1,11 +1,13 @@
 """ Events
 """
+from StringIO import StringIO
 from zope.event import notify
 import logging
 import json
 from eea.daviz.events import DavizEnabledEvent
 from eea.daviz.cache import InvalidateCacheEvent
-from zope.component import queryMultiAdapter, queryAdapter
+from zope.component import queryMultiAdapter, queryAdapter, queryUtility
+from eea.daviz.converter.interfaces import IExhibitJsonConverter
 from eea.daviz.interfaces import IDavizConfig
 logger = logging.getLogger('eea.daviz.events')
 
@@ -22,6 +24,9 @@ def onRelationsChanged(obj, evt):
         return
 
     new_json = {'items': [], 'properties': {}}
+    new_json['items'].extend(mutator.json.get('items', []))
+    new_json['properties'].update(mutator.json.get('properties', {}))
+
     for item in relatedItems:
         daviz_json = queryMultiAdapter((item, request), name=u'daviz-view.json')
         if not daviz_json:
@@ -44,6 +49,35 @@ def onRelationsChanged(obj, evt):
         else:
             typo = 'text'
         columns.append((key, typo))
+
+    notify(DavizEnabledEvent(obj, columns=columns, cleanup=False))
+    notify(InvalidateCacheEvent(raw=True, dependencies=['eea.daviz']))
+
+def onSpreadSheetChanged(obj, evt):
+    """ Handle spreadsheet
+    """
+    request = getattr(obj, 'REQUEST', None)
+    if not request:
+        return
+
+    mutator = queryAdapter(obj, IDavizConfig)
+    if not mutator:
+        return
+
+    new_json = {'items': [], 'properties': {}}
+    new_json['properties'].update(mutator.json.get('properties', {}))
+
+    datafile = StringIO(evt.spreadsheet)
+    converter = queryUtility(IExhibitJsonConverter)
+    try:
+        columns, data = converter(datafile)
+    except Exception, err:
+        logger.exception(err)
+        return
+
+    new_json['items'] = data.get('items', [])
+    new_json['properties'].update(data.get('properties', {}))
+    mutator.json = new_json
 
     notify(DavizEnabledEvent(obj, columns=columns, cleanup=False))
     notify(InvalidateCacheEvent(raw=True, dependencies=['eea.daviz']))
